# VNese_Stock_Analytic_System

./: .gitignore  README.md  activity_diagrams.md  data_flow.md  docker-compose.yml  start_all.bat  stop_all.bat
web_ptich_ck/BE/: Dockerfile  check_db_status.py  check_npat.py  current_mv.sql  dump.rdb  migrate_roles.py  pyproject.toml  read_kafka.py  read_parquet.py  test_api.py  test_macro.py  test_query.py  test_query_2.py  test_ws.py
web_ptich_ck/BE/app/: main.py
web_ptich_ck/BE/app/api/v1/: router.py
web_ptich_ck/BE/app/core/: config.py
web_ptich_ck/BE/app/database/: database.py  materialized_views_stock_list.sql  test_connection.py
web_ptich_ck/BE/app/modules/admin/: router.py  schemas.py
web_ptich_ck/BE/app/modules/alerts/: logic.py  router.py  schemas.py
web_ptich_ck/BE/app/modules/analysis/: logic.py  router.py  schemas.py
web_ptich_ck/BE/app/modules/auth/: logic.py  models.py  router.py  schemas.py  security.py
web_ptich_ck/BE/app/modules/chatbot/: embed_doc_to_vecto_database.ipynb  models.py  test_vector_search.ipynb
web_ptich_ck/BE/app/modules/indices/: logic.py  router.py  schemas.py
web_ptich_ck/BE/app/modules/market/: logic.py  router.py  schemas.py
web_ptich_ck/BE/app/modules/news/: logic.py  router.py  schemas.py
web_ptich_ck/BE/app/modules/portfolio/: logic.py  router.py  schemas.py
web_ptich_ck/BE/app/modules/stock/: logic.py  router.py  schemas.py  so_lieu_tai_chinh_mapping.md
web_ptich_ck/BE/app/modules/stock_list/: logic.py  mv_refresh.py  router.py  schemas.py
web_ptich_ck/BE/app/modules/tong_quan/: logic.py  router.py  (+1 more)
(+187 files in other folders)
